--- a/config/config.json
+++ b/config/config.json
@@ -1,12 +1,13 @@
 {
-  "entries": [
-    {
-      "entry": "./lib/webparts/handlebarsDemo/HandlebarsDemoWebPart.js",
-      "manifest": "./src/webparts/handlebarsDemo/HandlebarsDemoWebPart.manifest.json",
-      "outputPath": "./dist/handlebars-demo.bundle.js"
-    }
-  ],
-  "externals": {},
+  "entries": [{
+    "entry": "./lib/webparts/handlebarsDemo/HandlebarsDemoWebPart.js",
+    "manifest": "./src/webparts/handlebarsDemo/HandlebarsDemoWebPart.manifest.json",
+    "outputPath": "./dist/handlebars-demo.bundle.js"
+  }],
+  "externals": {
+    // "handlebars": "https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.amd.js"
+    "handlebars": "./node_modules/handlebars/dist/handlebars.amd.min.json"
+  },
   "localizedResources": {
     "handlebarsDemoStrings": "webparts/handlebarsDemo/loc/{locale}.js"
   }
