--- a/config/config.json
+++ b/config/config.json
@@ -5,8 +5,13 @@
     "outputPath": "./dist/handlebars-demo.bundle.js"
   }],
   "externals": {
+
+    // Load Handlebar templates from CDN
     // "handlebars": "https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.amd.js"
+
+    // load handlebars from node_modules
     "handlebars": "./node_modules/handlebars/dist/handlebars.amd.min.json"
+
   },
   "localizedResources": {
     "handlebarsDemoStrings": "webparts/handlebarsDemo/loc/{locale}.js"
